<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="registerUserInfoViewModel"
            type="be.hogent.faith.faith.loginOrRegister.registerUserInfo.RegisterUserInfoViewModel" />
    </data>


    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="420dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:gravity="center"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_register_username"
                style="@style/faith_textInputLayout"
                android:hint="@string/hint_choose_username"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorResId="@{registerUserInfoViewModel.userNameErrorMessage}"
                app:startIconDrawable="@drawable/ic_login_wrap">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@={registerUserInfoViewModel.userName}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_register_pwd"
                style="@style/faith_textInputLayout"
                android:layout_marginTop="10dp"
                android:hint="@string/kies_een_wachtwoord"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorResId="@{registerUserInfoViewModel.passwordErrorMessage}"
                app:startIconDrawable="@drawable/ic_lock_wrap">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={registerUserInfoViewModel.password}" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_register_pwd_repeat"
                style="@style/faith_textInputLayout"
                android:layout_marginTop="10dp"
                android:hint="@string/herhaal_je_wachtwoord"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorResId="@{registerUserInfoViewModel.passwordRepeatErrorMessage}"
                app:startIconDrawable="@drawable/ic_lock_wrap">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_register_password_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={registerUserInfoViewModel.passwordRepeated}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register_confirmInfo"
                style="@style/faith_button"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:onClick="@{()->registerUserInfoViewModel.onConfirmUserInfoClicked()}"
                android:text="@string/ga_verder"
                app:icon="@drawable/ic_gaverder"
                app:iconGravity="textStart"
                app:iconSize="34dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>