...
            <include
                android:id="@+id/include_login_txts"
                layout="@layout/view_login_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_login_ik_ben_nieuw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:welcomeViewModel="@{welcomeViewModel}" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_login_center_circle"
...
